--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 project ("OptimizedClickHandler")
 
 # Add source to this project's executable.
-add_executable (OptimizedClickHandler "OptimizedClickHandler.cpp" "OptimizedClickHandler.h")
+add_executable (OptimizedClickHandler "OptimizedClickHandler.cpp" "OptimizedClickHandler.h" "OptimizedClickHandlerUtils.h" "OptimizedClickHandlerUtils.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET OptimizedClickHandler PROPERTY CXX_STANDARD 20)
